--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,10 @@ dependencies:
   firebase_storage: ^11.2.7
   flutter:
     sdk: flutter
+  image_picker: ^1.0.4
+  intl_phone_field: ^3.2.0
   provider: ^6.0.5
+  restart_app: ^1.2.1
   uuid: ^4.1.0
 
 dev_dependencies:
